crates/formatter/tests/snapshots/snapshots__coder__migrations__000229_dormancy_notification_template.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = '0ea69165-ec14-4314-91f1-69566ac3c5a0';

delete from notification_templates
where id = '51ce2fdf-c9ca-4be1-8d70-628674f9bc42';
