crates/formatter/tests/snapshots/snapshots__coder__migrations__000233_notifications_user_created.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = '4e19c0ac-94e1-4532-9515-d1801aa283b2';
