crates/formatter/tests/snapshots/snapshots__coder__migrations__000234_fix_notifications_user_created.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set
	body_template = E'Hi {{.UserName}},\n\New user account **{{.Labels.created_account_name}}** has been created.'
where id = '4e19c0ac-94e1-4532-9515-d1801aa283b2';
