crates/formatter/tests/snapshots/snapshots__coder__migrations__000239_provisioner_daemon_org_constraint.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create unique index idx_provisioner_daemons_name_owner_key
	on provisioner_daemons
	using btree(name, lower(coalesce((tags ->> 'owner'::text), ''::text)));

comment on index idx_provisioner_daemons_name_owner_key is 'Allow unique provisioner daemon names by user';

drop index idx_provisioner_daemons_org_name_owner_key;
