crates/formatter/tests/snapshots/snapshots__coder__migrations__000240_notification_workspace_updated_version_message.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set
	body_template = E'Hi {{.UserName}}\n'
		|| E'Your workspace **{{.Labels.name}}** has been updated automatically to the latest template version ({{.Labels.template_version_name}}).'
where id = 'c34a0c09-0704-4cac-bd1c-0c0146811c2b';
